--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
   <script>
     let data = {
-      db: new URL(window.location.href).searchParams.get("db"),
+      db: new URL(window.location.href).searchParams.get("db") || "",
       types: [],
       records: {},
       activeType: -1,
